--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha "
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "chai": "^4.1.2",
