--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-- docker build zakaria/devops .
+- docker build -t zakaria/devops .
 - docker run -d -p 3000:3000 zakaria/devops 
 - docker ps -a
 
