--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - docker
 
 before_install:
+- node -v
 - npm install -g mocha
 - docker build -t zakaria/devops .
 - docker run -d -p 3000:3000 zakaria/devops 
